--- a/bulletin/templates/Inquiry.html
+++ b/bulletin/templates/Inquiry.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>문의 작성</title>
+
+    <!-- javascript 파일 로드 -->
+    <script src="../static/js/Inquiry.js"></script>
 </head>
+
 <body>
     <h1>문의 작성</h1>
     <form id="inquiry-form">
@@ -15,10 +19,7 @@
         <button type="submit">문의글 작성</button>
     </form>
 
-    <!-- 결과 메시지를 표시할 div -->
+    <!-- 결과 메시지 표시할 div -->
     <div id="message"></div>
-
-    <!-- JavaScript 파일 로드 -->
-    <script src="../static/js/Inquiry.js"></script>
 </body>
 </html>
