--- a/bulletin/templates/modInquiry.html
+++ b/bulletin/templates/modInquiry.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modify Inquiry</title>
 
-    <script src="../static/js/modInquiry.js"></script>
+    <!-- <script src="../static/js/modInquiry.js"></script> -->
 </head>
 
 <body>
