표 태그 수정(잔오타)

--- a/bulletin/templates/main.html
+++ b/bulletin/templates/main.html
@@ -54,10 +54,10 @@
                 <tr align="left" style='font-weight: bold';>
                     <th>ID</th>
                     <th>CONTENT</th>
-                    <td>PASSWORD</th>
+                    <th>PASSWORD</th>
                     <th>GENERATION_TIME</th>
-                    <td>UPDATED_TIME</td>
-                    <td></td>
+                    <th>UPDATED_TIME</th>
+                    <th></th>
                 </tr>
             </thead>
             <!-- 가져오는 코드 -->
